# maptk/core

set(maptk_core_headers_public
  camera.h
  camera_intrinsics.h
  camera_io.h
  camera_map.h
  camera_map_io.h
  config_block.h
  config_block_io.h
  core_config.h
  covariance.h
  descriptor.h
  descriptor_set.h
  exceptions.h
  feature.h
  feature_set.h
  geo_reference_points_io.h
  image.h
  image_container.h
  ins_data.h
  ins_data_io.h
  landmark.h
  landmark_map.h
  landmark_map_io.h
  local_geo_cs.h
  match_set.h
  matrix.h
  metrics.h
  projected_track_set.h
  rotation.h
  registrar.h
  similarity.h
  track.h
  track_set.h
  track_set_io.h
  transform.h
  types.h
  vector.h
  vector_cmath.h

  exceptions/algorithm.h
  exceptions/base.h
  exceptions/config_block.h
  exceptions/config_block_io.h
  exceptions/io.h

  algo/algorithm.h
  algo/algorithm.txx
  algo/analyze_tracks.h
  algo/bundle_adjust.h
  algo/close_loops.h
  algo/close_loops_bad_frames_only.h
  algo/convert_image.h
  algo/detect_features.h
  algo/draw_tracks.h
  algo/estimate_homography.h
  algo/estimate_similarity_transform.h
  algo/extract_descriptors.h
  algo/hierarchical_bundle_adjust.h
  algo/image_io.h
  algo/geo_map.h
  algo/match_features.h
  algo/match_features_homography.h
  algo/optimize_cameras.h
  algo/register.h
  algo/track_features.h
  algo/track_features_default.h
  algo/triangulate_landmarks.h
  )

set(maptk_core_sources
  camera.cxx
  camera_intrinsics.cxx
  camera_io.cxx
  camera_map_io.cxx
  config_block.cxx
  config_block_io.cxx
  feature.cxx
  geo_reference_points_io.cxx
  image.cxx
  ins_data.cxx
  ins_data_io.cxx
  landmark.cxx
  landmark_map_io.cxx
  local_geo_cs.cxx
  matrix.cxx
  metrics.cxx
  projected_track_set.cxx
  rotation.cxx
  similarity.cxx
  track.cxx
  track_set.cxx
  track_set_io.cxx
  transform.cxx
  vector.cxx

  exceptions/algorithm.cxx
  exceptions/base.cxx
  exceptions/config_block.cxx
  exceptions/config_block_io.cxx
  exceptions/io.cxx

  algo/algorithm.cxx
  algo/analyze_tracks.cxx
  algo/bundle_adjust.cxx
  algo/close_loops.cxx
  algo/close_loops_bad_frames_only.cxx
  algo/convert_image.cxx
  algo/detect_features.cxx
  algo/draw_tracks.cxx
  algo/estimate_homography.cxx
  algo/estimate_similarity_transform.cxx
  algo/extract_descriptors.cxx
  algo/geo_map.cxx
  algo/image_io.cxx
  algo/hierarchical_bundle_adjust.cxx
  algo/match_features.cxx
  algo/match_features_homography.cxx
  algo/optimize_cameras.cxx
  algo/register.cxx
  algo/track_features.cxx
  algo/track_features_default.cxx
  algo/triangulate_landmarks.cxx
  )

# installing header files
maptk_install_headers(
  ${maptk_core_headers_public}
  SUBDIR core
  )

maptk_add_library(maptk_core
  ${maptk_core_headers_public}
  ${maptk_core_sources}
  )
target_link_libraries(maptk_core
  ${Boost_LIBRARIES}
  )
